src/start-page/start-page.css
.header,
.footer {
    width: 100%;
    max-width: inherit;
    background-color: #ff9c3d;
    display: flex;
    align-items: center;
    padding: 20px 40px;
}

.header {
    position: relative;
}

.footer {
    position: fixed;
    bottom: 0;
    justify-content: space-between;
    gap: 20px;
}

.nav {
    width: inherit;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
}

.app-name {
    align-self: center;
    font-size: 40px;
    font-family: 'Architects Daughter';
}

.register-sign__block {
    display: flex;
    flex-direction: row;
}

.authorization-open__button,
.about-us__button,
.logout-open__button,
.register-submit,
.sign-submit,
.logout-button {
    width: fit-content;
    cursor: pointer;
    font-size: 24px;
    font-family: 'Architects Daughter';
    background-color: #ff4400;
    color: white;
    border: none;
    padding: 13px 18px;
    text-align: center;
}

.register-submit,
.sign-submit,
.logout-button {
    width: 100%;
    margin-bottom: 10px;
}

.main {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    padding: 0 40px;
    padding-bottom: 100px;
}

.games-button__wrap {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    gap: 40px;
    flex-direction: row;
    justify-content: space-evenly;
    margin: 50px 0 100px 0;
}

.about-us__info {
    width: 100%;
    margin: 50px 0;
    height: 200px;
    font-size: 24px;
    font-family: 'Architects Daughter';
    padding: 20px;
    border: 1px solid black;
}

.rsschool-img {
    width: 80px;
    height: auto;
}

.developers {
    display: flex;
    flex-direction: row;
    gap: 5px;
    flex-wrap: wrap;
    font-size: 20px;
}

.developers a {
    text-decoration: none;
    color: black;
    font-family: 'Architects Daughter';
}

.year {
    font-size: 20px;
    font-family: 'Architects Daughter';
}

.burger {
    height: 40px;
    cursor: pointer;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    z-index: 99;
}

.line1,
.line2,
.line3 {
    pointer-events: none;
    width: 40px;
    height: 4px;
    background-color: black;
    transition: all .4s ease-in-out;
}

.line1.active {
    width: 50px;
    transform-origin: left;
    transform: rotate(45deg);
    transition: all .4s ease-in-out;
}

.line2.passive {
    width: 0px;
    transition: all .4s ease-in-out;
}

.line3.active {
    width: 50px;
    transform-origin: left;
    transform: rotate(-45deg);
    transition: all .4s ease-in-out;
}

.burger-menu {
    font-size: 22px;
    font-family: 'Architects Daughter';
    background-color: #ff9c3d;
    position: absolute;
    top: 100%;
    left: -202px;
    transition: all .4s ease-in-out;
    width: 200px;
    z-index: 99;
}

.burger-menu.active {
    left: 0;
    transition: all .4s ease-in-out;
}

.burger-menu nav ul {
    list-style: none;
    padding: 0;
    text-align: center;
}

.burger-menu nav ul li {
    padding: 7px 0;
    display: flex;
    padding-left: 25px;
    text-align: left;
}

.burger-menu nav ul li a {
    text-decoration: none;
    color: black;
    padding: 7px 10px;
    display: flex;
    align-items: center;
    gap: 5px;
}

.burger-menu nav ul li a:hover {
    background-size: 100% 3.5px;
}

.burger-menu__img {
    width: 30px;
    height: fit-content;
}

.disabled {
    display: none;
}

.greet-block {
    margin-left: auto;
    font-family: 'Architects Daughter', 'JakobCTT';
    font-size: 24px;
}

@media (max-width:560px) {
    .nav {
        flex-direction: column;
        align-items: center;
    }

    .greet-block {
        margin-left: initial !important;
    }
}

.game-caption {
    text-align: center;
    margin-top: 20px;
    font-size: 30px;
    font-family: 'Architects Daughter';
}

.games-button__wrap div {
    cursor: pointer;
    transition: 0.3s;
}

.games-button__wrap div:hover {
    transform: scale(1.1);
    transition: 0.3s;
}

input::placeholder {
    font-family: 'Architects Daughter';
}

